# aisync

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  FAQ.md  FAQ.zh-CN.md  PREPARATION.md  PREPARATION.zh-CN.md  PROFILE_SPEC.md  PROFILE_SPEC.zh-CN.md  QUICKSTART.md  QUICKSTART.zh-CN.md  RECOVERY.md  RECOVERY.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY_STANDARD.md  SECURITY_STANDARD.zh-CN.md  TESTING.md  TESTING.zh-CN.md  WORKFLOW.md  WORKFLOW.zh-CN.md
profiles/: README.md  README.zh-CN.md
schemas/: README.md  README.zh-CN.md  profile.schema.json
src/aisync/: archive.py  cli.py  collector.py  crypto.py  deps.py  errors.py  gitstore.py  lock.py  matcher.py  operations.py  platforms.py  processes.py  profile.py  scanner.py  simple_yaml.py  state.py  ui.py
src/aisync/profiles/: claude.experimental.yaml  codex.yaml
tests/: test_core.py
