[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aisync"
version = "0.2.0a6"
description = "Privacy-first sync for local AI app data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AIsync contributors" }
]
dependencies = []

[project.scripts]
aisync = "aisync.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aisync = ["profiles/*.yaml"]
